# Xcientist

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  SYSTEM_DESIGN_v1.md  check_minimax_connection.py  decorator.py  environment.yml  idea_test.json  ltm_test.py  pyproject.toml  requirements.txt  run_blog.sh  run_experiment.sh  run_idea.sh  run_paper.sh  run_pipeline.sh  run_survey.sh  stm_test.py  test.sh  test_paper.sh
.openhands/: prepareagent_conversation_stats.json
.trae/documents/: master_delegation_refactor_plan.md  prepare-workflow-repos-dataset-mcp-plan.md  prepare_agent_resource_acquisition_prompt_plan.md
api/: base_memory_system_api.py  slot_process_api.py
database/graph_keynotes/: cache.db
database/paper_abstracts/: cache.db-shm  cache.db-wal
database/paper_keynotes/: cache.db
docs/plans/: 2026-03-01-experiment-agent-optimization.md  2026-03-01-skills-expansion.md
graph/: index_core_component_summaries.py  visualize.py
graph_server/: server.py
idea_skill_priors/: symbolic_memory.json
memory_system/: models.py  user_prompt.py  vectorstore.py  working_slot.py
output/_smoke_full/artifacts/compile/: compile.stdout.txt
output/_smoke_full/artifacts/index/: compile_result.json
output/_smoke_full/paper/: main.tex
output/_smoke_full/state/: paper_state.json
output/_smoke_min/artifacts/compile/: compile.stdout.txt
output/_smoke_min/artifacts/index/: compile_result.json  vlm_layout_review.json
output/_smoke_min/paper/: main.tex
output/_smoke_min/state/: paper_state.json
output/_smoke_spec/paper/: main.tex
output/_smoke_spec/state/: paper_state.json
output/_smoke_wrap/paper/: main.tex
output/_smoke_wrap/state/: paper_state.json
output/symbolic_memory.json/: symbolic_memory.json
pipeline_runs/test/: pipeline.yaml
scripts/: install_base.sh  install_heavy.sh  install_mcp_wrappers.sh  sync_claude_anthropic_env.py
src/: __init__.py  cli.py
src/agents/: setup.py  test_pipeline_run_loop.py
src/agents/blog_agent/: README.md  environment.yml  run_blog.sh
src/agents/blog_agent/agent/: new_base_agent.py
src/agents/blog_agent/config/: __init__.py  config.yaml.example  loader.py
src/agents/blog_agent/scripts/: run.py
src/agents/blog_agent/tools/: count_words_tool.py  download_paper_pdf_tool.py  gengraph.py  illustrate.py  ocr.py  search_core_tool.py  search_paper_abstract_tool.py
src/agents/blog_agent/utils/: deeperaser.py  search_core.py  semantic_scholar.py
src/agents/experiment_agent/: README.md  config.py  experiment_adapter.py  main.py  prepare.py
src/agents/experiment_agent/agents/: __init__.py
src/agents/experiment_agent/docs/: generate_diagrams.py
src/agents/experiment_agent/environment/: docker_client.py
src/agents/experiment_agent/layers/: __init__.py
src/agents/experiment_agent/logger/: agent_hooks.py
src/agents/experiment_agent/prompts/: ablation_report_integrator.j2  ablation_science_planner_agent.j2  ablation_science_step_executor.j2  ablation_science_validator.j2  ablation_science_worker.j2  code_planner_agent.j2  code_step_executor.j2  code_validator.j2  code_worker.j2  iteration_reporter.j2  master_agent.j2  prepare_agent.j2  prepare_step_executor.j2  prepare_validator.j2  prepare_worker.j2  science_planner_agent.j2  (+4 more)
src/agents/idea_agent/: IDEA_AGENT_DOC.md  README.md  README_CN.md  __init__.py  idea_result.json  run.py  test_ablation_inputs.py  test_chat_transport.py  test_keynote_capsules.py
src/agents/paper_agent/: __init__.py  architect.py  entry.py  main.py  writer.py
src/agents/survey_agent/: .gitignore  Dockerfile  README.md  baseline_evaluation.py  code_report.md  env_report.md  requirements.txt  revised_sections_debug.txt  run_deep_survey.py  run_deep_survey_batch.py  topics.txt
src/config/: __init__.py  default.yaml
src/harness/: VENDORED.md
src/memory/: README.md  decorator.py  ltm_test.py  requirements.txt  setup.py  stm_test.py  test_symbolic_memory_hierarchical.py
src/memory/api/: base_memory_system_api.py  base_symbolic_memory_system_api.py  base_vector_memory_system_api.py  component_taxonomy.py  faiss_memory_system_api.py  slot_process_api.py  symbolic_memory_system_api.py
src/memory/memory_system/: __init__.py  component_taxonomy.py  denstream.py  llm.py  models.py  schema.py  storage.py  user_prompt.py  utils.py  vectorstore.py  working_slot.py
src/pipeline/: __init__.py  config.py  contracts.py  experiment_to_symbolic.py  run_loop.py
tests/: test_compile.py  test_experiment_agent_artifact_contract.py  test_experiment_agent_control_plane.py  test_experiment_agent_idea_components.py  test_experiment_agent_manifests.py  test_pipeline_config_unification.py
workspace/training-free-memory-example/agent_reports/: ablation_science_summary.md  code_summary.md  code_usage.md  iteration_summary.md  master_report.md  master_summary.md  prepare_idea.md  standard_science_summary.md
(+1460 files in other folders)
